_sass/base.scss
@charset "utf-8";
//@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,700');
//@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');

/**
 * Style variables
 */
//$base-font-family:     'Source Code Pro', monospace !default;
$base-font-family: "IBM Plex Sans", "Helvetica Neue", sans-serif !default;
$base-font-size: 16px !default;
$code-font-size: 13px !default;
$mobile-font-size: 12px !default;
$base-line-height: 1.5 !default;
$container-width: 90% !default;
$container-max-width: 800px !default;

/**
 * Global
 */
body {
    background-color: $background-color;
    margin: 0 auto;
    padding: 0;
    font-family: $base-font-family;
    font-size: $base-font-size;
    color: $text-color;
    text-align: left;
    line-height: $base-line-height !important;
    overflow-x: hidden;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 22px 0px -5px 0px;
    font-weight: bold;
    color: $heading-color;
}
ul,
ol {
    margin-left: 10px;
    color: $text-color;
}
a {
    text-decoration: underline $text-underline-color;
    color: $link-color;
}
a:hover {
    color: $background-color;
    background-color: $base-color;
}
.primary-text {
    color: $primary-color;
}
@media only screen and (max-device-width: 500px) {
    * {
        font-size: $mobile-font-size !important;
    }
}
/*h1:before { content: "#";  margin-right: 9px; }
h2:before { content: "##";  margin-right: 9px; }
h3:before { content: "###";  margin-right: 9px; }
h4:before { content: "####";  margin-right: 9px; }
h5:before { content: "#####";  margin-right: 9px; }
h6:before { content: "######";  margin-right: 9px; }*/

/**
 * Layout
 */
.container {
    width: $container-width;
    max-width: $container-max-width;
    margin-right: auto;
    margin-left: auto;
}
p {
    word-wrap: break-word;
    word-break: break-word;
    white-space: pre-wrap;
}
footer {
    color: $text-color;
    border-top: $border;
    margin: 20px auto 15px;
    padding-top: 10px;
    text-align: right;
}
header {
    margin-top: 25px;
    margin-bottom: 10px;
}
header p {
    text-align: left;
    margin: 0;
}
footer {
    margin-bottom: 20px;
}

/**
 * Highlight/Markup
 */
::selection {
    background: $selection-background;
    color: $selection-text;
}
::-moz-selection {
    background: $selection-background;
    color: $selection-text;
}

/**
 * Lists and tables
 */
:not(.menu) > ul {
    list-style: none;
    padding-left: 0;
}
:not(.menu) > ul {
    list-style-type: none;
}
:not(.menu) > ul > li:before {
    content: "–";
    margin-right: 7px;
}
/*:not(.menu) > ul > li:before { content: "•";  margin-right: 7px; }*/
table {
    border-collapse: collapse;
    border-spacing: 0;
    display: block;
    padding: 10px;
}

td,
th {
    border: 1px solid;
    padding: 0.5rem;
    text-align: left;
}

/**
 * Header/Navigation
 */
.menu {
    border-bottom: $border;
    margin-bottom: 25px;
}
.menu ul {
    margin-top: 12px;
    margin-bottom: 12px;
    padding-left: 0px;
    list-style-type: none;
    text-align: right;
}
.menu ul li {
    display: inline;
    margin-left: 10px;
}
.menu ul li a {
    text-decoration: none;
    color: $text-color;
}
.menu ul li a:hover {
    text-decoration: none;
    color: $background-color;
    background-color: $base-color;
}

/**
 * Form
 */
/*input, select, textarea { padding: 0;  margin: 0;  -webkit-appearance: none;  -webkit-border-radius: 0;  border: none; }*/
input[type="text"],
select,
textarea {
    width: 100%;
    resize: none;
    background-color: $background-color;
    color: $text-color;
    caret-color: $text-color;
    font-size: $base-font-size;
    font-family: $base-font-family;
    line-height: $base-line-height;
}
input,
select,
textarea,
textarea::-webkit-input-placeholder {
    text-indent: 0px;
}
::placeholder {
    color: $placeholder-color;
    opacity: 1;
}
:-ms-input-placeholder {
    color: $placeholder-color;
}
::-ms-input-placeholder {
    color: $placeholder-color;
}
input[type="submit"] {
    font-size: $base-font-size;
    font-family: $base-font-family;
    line-height: $base-line-height;
    cursor: pointer;
    color: $link-color;
    background-color: $background-color;
}
input[type="submit"]:hover {
    color: $background-color;
    background-color: $base-color;
}
*:focus {
    outline: none;
}
textarea {
    vertical-align: top;
}

/**
 * Images
 */
video {
    position: relative;
    max-width: 100%;
    height: auto;
    left: 50%;
    transform: translate(-50%);
    padding: 20px 0 20px 0;
}

video + p em {
    display: block;
    text-align: center;
    margin-top: -15px;
    margin-bottom: 15px;
}

img {
    position: relative;
    max-width: 100%;
    height: auto;
    left: 50%;
    transform: translate(-50%);
    padding: 20px 0 20px 0;
}

img + em {
    display: block;
    text-align: center;
    margin-top: -15px;
    margin-bottom: 15px;
}

/*
 * Other?
 */
/* Horizontal line */
/*
hr {
    color: $line-color;
    width: 120%;
    margin: 20px 0 20px 50%;
    transform: translate(-50%);
}
*/

hr {
    color: $line-color;
    width: 100vw;
    margin: 20px 0;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
}

blockquote {
    border-left: 2px solid $line-color;
    margin: 5px 0px 5px 0px;
    padding: 1px 15px;
    background: $background-color-hard;
}

/**
 * Code and syntax highlighting
 */
@font-face {
    font-family: "Cascadia Code";
    src: url("../assets/CascadiaCode.ttf");
}

code {
    font-family: "Cascadia Code", monospace;
}

pre {
    padding: 15px;
    scrollbar-width: thin;
    scrollbar-color: $text-color $background-color;
    background-color: $background-color;
    border: none;
    overflow: auto;
    font-size: $code-font-size;
    color: rgba(255, 255, 255, 0.65);
    line-height: 1.3 !important;
}
.highlight .hll {
    background-color: #ffffcc;
}
.highlight {
    background: $background-color-dark;
    color: $base-color;
    background-color: $background-color-dark;
}
.highlight .c {
    color: #928374;
    font-style: italic;
    background-color: $background-color-dark;
} /* Comment */
.highlight .err {
    color: #ebdbb2;
} /* Error */
.highlight .esc {
    color: #ebdbb2;
} /* Escape */
.highlight .g {
    color: #ebdbb2;
} /* Generic */
.highlight .k {
    color: #fe8019;
} /* Keyword */
.highlight .l {
    color: #ebdbb2;
} /* Literal */
.highlight .n {
    color: #ebdbb2;
} /* Name */
.highlight .o {
    color: #fe8019;
} /* Operator */
.highlight .x {
    color: #ebdbb2;
} /* Other */
.highlight .p {
    color: #ebdbb2;
} /* Punctuation */
.highlight .ch {
    color: #928374;
    font-style: italic;
} /* Comment.Hashbang */
.highlight .cm {
    color: #928374;
    font-style: italic;
} /* Comment.Multiline */
.highlight .cp {
    color: #8ec07c;
} /* Comment.Preproc */
.highlight .c1 {
    color: #928374;
    font-style: italic;
} /* Comment.Single */
.highlight .cs {
    color: #928374;
    font-style: italic;
} /* Comment.Special */
.highlight .gd {
    color: #282828;
    background-color: #fb4934;
} /* Generic.Deleted */
.highlight .ge {
    color: #83a598;
    text-decoration: underline;
    background-color: #282828;
} /* Generic.Emph */
.highlight .gr {
    color: #ebdbb2;
    font-weight: bold;
    background-color: #fb4934;
} /* Generic.Error */
.highlight .gh {
    color: #b8bb26;
    font-weight: bold;
} /* Generic.Heading */
.highlight .gi {
    color: #282828;
    background-color: #b8bb26;
} /* Generic.Inserted */
.highlight .go {
    color: #504945;
} /* Generic.Output */
.highlight .gp {
    color: #ebdbb2;
} /* Generic.Prompt */
.highlight .gs {
    color: #ebdbb2;
} /* Generic.Strong */
.highlight .gu {
    color: #b8bb26;
    font-weight: bold;
} /* Generic.Subheading */
.highlight .gt {
    color: #ebdbb2;
    font-weight: bold;
    background-color: #fb4934;
} /* Generic.Traceback */
.highlight .kc {
    color: #fe8019;
} /* Keyword.Constant */
.highlight .kd {
    color: #fe8019;
} /* Keyword.Declaration */
.highlight .kn {
    color: #fe8019;
} /* Keyword.Namespace */
.highlight .kp {
    color: #fe8019;
} /* Keyword.Pseudo */
.highlight .kr {
    color: #fe8019;
} /* Keyword.Reserved */
.highlight .kt {
    color: #fabd2f;
} /* Keyword.Type */
.highlight .ld {
    color: #ebdbb2;
} /* Literal.Date */
.highlight .m {
    color: #d3869b;
} /* Literal.Number */
.highlight .s {
    color: #b8bb26;
} /* Literal.String */
.highlight .na {
    color: #b8bb26;
    font-weight: bold;
    background-color: #282828;
} /* Name.Attribute */
.highlight .nb {
    color: #fabd2f;
} /* Name.Builtin */
.highlight .nc {
    color: #ebdbb2;
} /* Name.Class */
.highlight .no {
    color: #d3869b;
} /* Name.Constant */
.highlight .nd {
    color: #ebdbb2;
} /* Name.Decorator */
.highlight .ni {
    color: #fabd2f;
} /* Name.Entity */
.highlight .ne {
    color: #fb4934;
} /* Name.Exception */
.highlight .nf {
    color: #fabd2f;
} /* Name.Function */
.highlight .nl {
    color: #fb4934;
} /* Name.Label */
.highlight .nn {
    color: #ebdbb2;
} /* Name.Namespace */
.highlight .nx {
    color: #ebdbb2;
} /* Name.Other */
.highlight .py {
    color: #ebdbb2;
} /* Name.Property */
.highlight .nt {
    color: #fb4934;
} /* Name.Tag */
.highlight .nv {
    color: #ebdbb2;
} /* Name.Variable */
.highlight .ow {
    color: #fe8019;
} /* Operator.Word */
.highlight .w {
    color: #ebdbb2;
} /* Text.Whitespace */
.highlight .mb {
    color: #d3869b;
} /* Literal.Number.Bin */
.highlight .mf {
    color: #d3869b;
} /* Literal.Number.Float */
.highlight .mh {
    color: #d3869b;
} /* Literal.Number.Hex */
.highlight .mi {
    color: #d3869b;
} /* Literal.Number.Integer */
.highlight .mo {
    color: #d3869b;
} /* Literal.Number.Oct */
.highlight .sb {
    color: #b8bb26;
} /* Literal.String.Backtick */
.highlight .sc {
    color: #b8bb26;
} /* Literal.String.Char */
.highlight .sd {
    color: #b8bb26;
} /* Literal.String.Doc */
.highlight .s2 {
    color: #b8bb26;
} /* Literal.String.Double */
.highlight .se {
    color: #b8bb26;
} /* Literal.String.Escape */
.highlight .sh {
    color: #b8bb26;
} /* Literal.String.Heredoc */
.highlight .si {
    color: #b8bb26;
} /* Literal.String.Interpol */
.highlight .sx {
    color: #b8bb26;
} /* Literal.String.Other */
.highlight .sr {
    color: #b8bb26;
} /* Literal.String.Regex */
.highlight .s1 {
    color: #b8bb26;
} /* Literal.String.Single */
.highlight .ss {
    color: #83a598;
} /* Literal.String.Symbol */
.highlight .bp {
    color: #fabd2f;
} /* Name.Builtin.Pseudo */
.highlight .vc {
    color: #ebdbb2;
} /* Name.Variable.Class */
.highlight .vg {
    color: #ebdbb2;
} /* Name.Variable.Global */
.highlight .vi {
    color: #ebdbb2;
} /* Name.Variable.Instance */
.highlight .il {
    color: #d3869b;
} /* Literal.Number.Integer.Long */

.toc {
    font-size: 14px;
}

